# neutron

./: .bzrignore  .coveragerc  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .project  .pydevproject.moved  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  AGENTS.md  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  PKG-INFO  README  README.rst  TESTING  TESTING.rst  bindep.txt  concourse_unit_test_task  custom-requirements.txt  lower-constraints.txt  mypy.ini  openstack-common.conf  package-midonet-only.sh  pep8.errors  plugin.spec  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  setup.py  setup_cisco_plugin.py  setup_client.py  setup_common.py  setup_openvswitch_plugin.py  (+7 more)
.github/: CODEOWNERS
.github/workflows/: tag-and-release.yml
api-ref/: README.rst
cisco_demo/: demo_client.py  demo_client.py.bk  test_client.py
cisco_extensions/: __init__.py  exceptions.py  extensions.py  faults.py  portprofiles.py  pprofiles.py
client/: setup.py
common/: README  setup.py
devstack/: ml2-ovs-compute-local.conf.sample  ml2-ovs-local.conf.sample  ovn-compute-local.conf.sample  ovn-db-local.conf.sample  ovn-local.conf.sample  ovn-vtep-local.conf.sample  plugin.sh  settings
devstack/lib/: bgp  distributed_dhcp  dns  dns_forwarder_ovs_ext  fip_port_forwarding  flavors  frr  l2_agent  l2_agent_sriovnicswitch  l3_agent  l3_conntrack_helper  l3_ndp_proxy  local_ip  log  loki  macvtap_agent  metadata_path  ml2  network_segment_range  octavia  ovn_agent  ovs  placement  port_trusted_vif  pvlan  qos  rally  segments  tag_ports_during_bulk_creation  trunk  uplink_status_propagation
doc/: Makefile  pom.xml  requirements.txt
doc/dashboards/: check.dashboard.html  gate.dashboard.html  graphite.dashboard.html  index.html
doc/source/: __init__.py  _intro.rst  conf.py  index.rst  pdf-index.rst
etc/: README.policy.json.txt  README.policy.yaml.txt  README.txt  api-paste.ini  dhcp_agent.ini  fullstack_tests_policy.yaml  fwaas_driver.ini  l3_agent.ini  lbaas_agent.ini  metadata_agent.ini  metering_agent.ini  neutron.conf  plugins.ini  policy.json  quantum  quantum.conf  quantum.conf.keystone  quantum.conf.mocktest  quantum.conf.sample  quantum.conf.test  rootwrap.conf  services.conf  vpn_agent.ini
etc/init.d/: neutron-server  quantum-server
etc/oslo-config-generator/: bgp_dragent.ini  dhcp_agent.ini  l3_agent.ini  linuxbridge_agent.ini  macvtap_agent.ini  metadata_agent.ini  metering_agent.ini  ml2_conf.ini  ml2_conf_sriov.ini  neutron.conf  neutron_ovn_metadata_agent.ini  openvswitch_agent.ini  ovn.ini  ovn_agent.ini  sriov_agent.ini
etc/oslo-policy-generator/: policy.conf
etc/quantum/: api-paste.ini
extensions/: _credential_view.py  _exceptions.py  _faults.py  _novatenant_view.py  _pprofiles.py  _qos_view.py  credential.py  novatenant.py  portprofile.py  qos.py
neutron/: __init__.py  _i18n.py  auth.py  context.py  hooks.py  i18n.py  manager.py  neutron_plugin_base_v2.py  opts.py  policy.py  quota.py  service.py  version.py  worker.py  wsgi.py
neutron/agent/: _topics.py  agent_extension.py  agent_extensions_manager.py  dhcp_agent.py  firewall.py  l2population_rpc.py  l3_agent.py  l3_ha_agent.py  metadata_agent.py  netns_cleanup_util.py  ovs_cleanup_util.py  ovsdb.py  resource_cache.py  rpc.py  securitygroups_rpc.py
neutron/api/: __init__.py  api_common.py  converters.py  extensions.py  versions.py  wsgi.py
neutron/callbacks/: events.py  exceptions.py  manager.py  registry.py  resources.py
neutron/cmd/: __init__.py  destroy_patch_ports.py  ipset_cleanup.py  keepalived_state_change.py  linuxbridge_cleanup.py  netns_cleanup.py  ovs_cleanup.py  pd_notify.py  remove_duplicated_port_bindings.py  runtime_checks.py  sanitize_port_binding_profile_allocation.py  sanitize_port_mac_addresses.py  sanity_check.py  status.py  usage_audit.py
neutron/common/: _constants.py  _deprecate.py  cache_utils.py  config.py  constants.py  coordination.py  eventlet_utils.py  exceptions.py  experimental.py  ipv6_utils.py  legacy.py  log.py  loopingcall.py  metadata.py  profiler.py  repos.py  rpc.py  rpc_compat.py  test_lib.py  topics.py  utils.py  wsgi_utils.py
neutron/conf/: cache_utils.py  common.py  policy.py  (+5 more)
playbooks/: add_mariadb_repo.yaml  collect_bgp_diagnostics.yaml  configure_bgp_networking.yaml  configure_ebtables.yaml  configure_functional_job.yaml  configure_swap.yaml  dvr-multinode-scenario-pre-run.yaml  enable-fips.yaml  install_nftables.yaml  multinode-devstack-custom.yaml  multinode-setup.yaml  post_functional_job.yaml  prepare-ovn-multinode.yaml  run_functional_job.yaml
quantum/: README  __init__.py  auth.py  cli.py  cli_lib.py  cli_output.template  client.py  context.py  manager.py  plugins.ini  policy.py  quantumCLI.py  quantum_plugin_base.py  quantum_plugin_base_v2.py  quota.py  service.py  setup.py  utils.py  version.py  wsgi.py
rally-jobs/: README.rst  neutron-neutron.yaml  task-neutron.yaml
rally-scenarios/: README.rst  neutron-neutron.yaml
server/: MANIFEST.in  setup.py
test_scripts/: tests.py
tools/: abandon_old_reviews.sh  batch_config.py  bug-1921150-re-parent-device-rps.sql  build_debs.sh  build_rpms.sh  check_bash.sh  check_i18n.py  check_i18n_test_case.txt  check_unit_test_structure.sh  clean.sh  coding-checks.sh  configure_for_func_testing.sh  copy_api_tests_from_tempest.sh  dep_version_diff.py  deploy_rootwrap.sh  download_gerrit_change.py  files_in_patch.py  fix_zero_length_ip_prefix.py  generate_config_file_samples.sh  generate_dhclient_script_for_fullstack.sh  i18n_cfg.py  install_venv.py  install_venv_common.py  list_moved_globals.py  migrate_names.py  migrate_names.txt  milestone-review-dash.py  misc-sanity-checks.sh  ostestr_compat_shim.sh  patch_tox_venv.py  pecan_server.sh  pip-requires  pip_install_src_modules.sh  pretty_tox.sh  requirements.txt  run_pep8.sh  source_environment.py  source_nonplugin_environment.py  split.sh  test-requires  (+3 more)
zuul.d/: base.yaml  grenade.yaml  job-templates.yaml  project.yaml  rally.yaml  tempest-multinode-bgp.yaml  tempest-multinode.yaml  tempest-singlenode.yaml  tripleo.yaml
(+6140 files in other folders)
